--- a/front-end/src/app/ingredient/ingredient.component.html
+++ b/front-end/src/app/ingredient/ingredient.component.html
@@ -43,7 +43,27 @@
           <input type="number" placeholder="Trans fat" class="form-control" matInput formControlName="transFat">
       </mat-form-field>      
       <input type="hidden" formControlName="Created_date">      
-      <input type="hidden" formControlName="__v">      
+      <input type="hidden" formControlName="__v">    
+      <h2>Unit conversions</h2> 
+      <div formArrayName="transformations">
+          <div *ngFor="let transformation of ingredientForm.controls.transformations.controls; index as index;" >
+            <div [formGroup]="transformation">
+              <mat-form-field>
+                <input matInput type="text" placeholder="Ratio" formControlName="ratio">
+              </mat-form-field>
+              <mat-form-field>
+                <mat-select  formControlName="unit">
+                  <mat-option *ngFor="let unitOption of unitsList | async" [value]="unitOption._id">
+                    {{ unitOption.name }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <button mat-button color="primary" (click)="removeTransformation(index)">-</button>
+          </div>
+          <button mat-button color="primary" (click)="addTransformation()">Add</button>
+      </div>
+      <hr /> 
   </form>
     <div>
     <button mat-raised-button color="primary" (click)="save()" [disabled]="!ingredientForm.valid" color="primary">save</button>
