--- a/front-end/src/app/recipe/recipe.component.html
+++ b/front-end/src/app/recipe/recipe.component.html
@@ -6,17 +6,30 @@
         <h2>Ingredients</h2>
         <div formArrayName="ingredients">
             <div *ngFor="let ingredient of ingredients.controls" >
-            <mat-form-field>
-                <mat-select [formControl]="ingredient">
-                  <mat-option *ngFor="let ingredientOption of ingredientList | async" [value]="ingredientOption.id">
-                    {{ ingredientOption.name }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
+              <div [formGroup]="ingredient">
+                <mat-form-field>
+                  <mat-select formControlName="ingredient">
+                    <mat-option *ngFor="let ingredientOption of ingredientList | async" [value]="ingredientOption._id">
+                      {{ ingredientOption.name }}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <mat-form-field>
+                  <input matInput type="text" placeholder="Amount" formControlName="amount">
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-select  formControlName="unit">
+                    <mat-option *ngFor="let unitOption of unitsList | async" [value]="unitOption._id">
+                      {{ unitOption.name }}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
               <button mat-button color="primary" (click)="removeIngredient(ingredient)">-</button>
             </div>
             <button mat-button color="primary" (click)="addIngredient()">+</button>
         </div>
+        <input type="hidden" formControlName="_id">
         <div>
           <button mat-button color="primary" (click)="save()">save</button>
           <button mat-button color="primary" (click)="goBack()">go back</button>
